Home and Welcome web page done

--- a/home.html
+++ b/home.html
@@ -15,7 +15,8 @@
 
 <body>
     <div class="home">
-        <img src="./Images/Web 1920 – 1.png" alt="Home-Page">
+        <img src="./Images/Web 1920 – 1.png" alt="Home-Page" class="big">
+        <a href="welcome.html"><img src="./Images/arrow.png" alt="arrow" class="small"></a>
     </div>
     
     
