pushing recent changes

--- a/welcome.html
+++ b/welcome.html
@@ -28,6 +28,12 @@
         <a href="welcome.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go2"></a>
         <a href="welcome.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go3"></a>
 
+        <a href="calendar.html"><img src="./Images/Component 4 – 1.png" alt="arrow" class="small3"></a>
+        <a href="home.html"><img src="./Images/Component 3 – 1.png" alt="arrow" class="homebtn"></a>
+        <a href="podcast.html"><img src="./Images/Component 5 – 1.png" alt="arrow" class="songbtn"></a>
+
+
+
         
         <div class="button1">
             <h2>Anxiety</h2>
