--- a/welcome.html
+++ b/welcome.html
@@ -24,7 +24,7 @@
 
         <h3>how can we help you today?</h3>
 
-        <a href="welcome.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go1"></a>
+        <a href="app.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go1"></a>
         <a href="welcome.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go2"></a>
         <a href="welcome.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go3"></a>
 
@@ -32,11 +32,9 @@
         <a href="home.html"><img src="./Images/Component 3 – 1.png" alt="arrow" class="homebtn"></a>
         <a href="podcast.html"><img src="./Images/Component 5 – 1.png" alt="arrow" class="songbtn"></a>
 
-
-
         
         <div class="button1">
-            <h2>Anxiety</h2>
+            <h2>Stress Relief</h2>
         </div>
 
         <div class="button2">
