--- a/calendar.html
+++ b/calendar.html
@@ -22,5 +22,7 @@
         <a href="welcome.html"><img src="./Images/arrow.png" alt="arrow" class="small4"></a>
         <h1>Calendar</h1>
         <h3>arrange your schedule . . .</h3>
-        <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23d8e2dc&amp;ctz=America%2FLos_Angeles&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%230B8043&amp;mode=WEEK&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;showTabs=1" style="border-width:0" width="1500" height="600" frameborder="0" scrolling="no"></iframe></body>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23d8e2dc&amp;ctz=America%2FLos_Angeles&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%230B8043&amp;mode=WEEK&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;showTabs=1" style="border-width:0" width="1500" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+</body>
 </html>
