--- a/Scripts/app.html
+++ b/Scripts/app.html
@@ -8,23 +8,70 @@
 </head>
 <body>
 
+    <h1>What’s Making You Anxious?</h1>
+
     <form action="/" method="POST" id="choiceForm">
+        <h3>School</h3>
         <input type="radio" id="yesBtn1" name="field1" value="0">
         <label for="yesBtn1">Yes</label>
 
         <input type="radio" id="noBtn1" name="field1" value="0">
         <label for="noBtn1">No</label>
 
+        <h3>Relationships</h3>
+        <input type="radio" id="yesBtn2" name="field2" value="0">
+        <label for="yesBtn2">Yes</label>
 
+        <input type="radio" id="noBtn2" name="field2" value="0">
+        <label for="noBtn2">No</label>
 
+        <h3>Past Experiences</h3>
+        <input type="radio" id="yesBtn3" name="field3" value="0">
+        <label for="yesBtn3">Yes</label>
 
+        <input type="radio" id="noBtn3" name="field3" value="0">
+        <label for="noBtn3">No</label>
 
-        
+        <h3>Life Changes</h3>
+        <input type="radio" id="yesBtn4" name="field4" value="0">
+        <label for="yesBtn4">Yes</label>
+
+        <input type="radio" id="noBtn4" name="field4" value="0">
+        <label for="noBtn4">No</label>
+
+        <h3>Future Plans</h3>
+        <input type="radio" id="yesBtn5" name="field5" value="0">
+        <label for="yesBtn5">Yes</label>
+
+        <input type="radio" id="noBtn5" name="field5" value="0">
+        <label for="noBtn5">No</label>
+
+        <br><br>
         <button id="submitBtn">Submit</button>
     </form>
 
     <div style="display: none;" id="videoDiv">
         <iframe width="420" height="315" src="" id="videoFrame">
+        </iframe> 
+    </div>
+
+    <div style="display: none;" id="videoDiv2">
+        <iframe width="420" height="315" src="" id="videoFrame2">
+        </iframe> 
+    </div>
+
+    <div style="display: none;" id="videoDiv3">
+        <iframe width="420" height="315" src="" id="videoFrame3">
+        </iframe> 
+    </div>
+
+    <div style="display: none;" id="videoDiv4">
+        <iframe width="420" height="315" src="" id="videoFrame4">
+        </iframe> 
+    </div>
+
+    <div style="display: none;" id="videoDiv5">
+        <iframe width="420" height="315" src="" id="videoFrame5">
         </iframe> 
     </div>
 
