--- a/aff.html
+++ b/aff.html
@@ -19,6 +19,8 @@
     <div class="aff">
         <h1>Affirmations</h1>
 
+        <h3>Affirmations are powerful, positive statements that aim to direct your conscious and subconscious mind, challenging previously held unhealthy and negative thinking patterns. When they are spoken with conviction, they can alter your thoughts, emotions, beliefs and behaviour. When used intentionally to create change, they can help project you into your achievements.</h3>
+
         <img src="./Images/Web 1920 – 4.png" alt="Home-Page" class="big4">
 
         <div class="buttons">
