--- a/welcome.html
+++ b/welcome.html
@@ -24,9 +24,9 @@
 
         <h3>how can we help you today?</h3>
 
-        <a href="app.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go1"></a>
-        <a href="welcome.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go2"></a>
-        <a href="welcome.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go3"></a>
+        <a href="Scripts/app.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go1"></a>
+        <a href="aff.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go2"></a>
+        <a href="explore.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go3"></a>
 
         <a href="calendar.html"><img src="./Images/Component 4 – 1.png" alt="arrow" class="small3"></a>
         <a href="home.html"><img src="./Images/Component 3 – 1.png" alt="arrow" class="homebtn"></a>
