--- a/app.html
+++ b/app.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 
-    <h1>What's Causing You Stress?</h1>
+    <div class="txted">
+        <h1>What's Causing You Stress?</h1>
+    </div>
 
     <!-- <form action="/" method="POST" id="choiceForm">
         <h3>School</h3>
