--- a/welcome.html
+++ b/welcome.html
@@ -24,7 +24,7 @@
 
         <h3>how can we help you today?</h3>
 
-        <a href="Scripts/app.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go1"></a>
+        <a href="app.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go1"></a>
         <a href="aff.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go2"></a>
         <a href="explore.html"><img src="./Images/Component 2 – 1.png" alt="arrow-2" class="go3"></a>
 
